add: ファイル追加
OnsenUIの追加とindex.html等の基本的なファイルを追加。

--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
+<!DOCTYPE html>
 <html>
     <head>
-        <meta cherset="UTF-8">
-        <title>こんにちは</title>
+        <meta charset="UTF-8">
+        <link href="Styles/default.css" rel="stylesheet">
+        <link href="Styles/index.css" rel="stylesheet">
+        <title>自己紹介アプリ - トップ</title>
+
+        <!--スマホ用のリサイズmetaタグ-->
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     </head>
+
     <body>
-        <h1>テスト</h1>
+        <h1>自己紹介アプリ</h1>
+        <div class="T_button">
+        <button onclick="location.href='./form.html'">作る</button>
+        <button onclick="location.href='./undefind.html'">見る</button>
+        <button onclick="location.href='./undefind.html'">渡す</button>
+        </div>
     </body>
 </html>
