update: コード修正
form.htmlを全て中央揃えに変更。

--- a/form.html
+++ b/form.html
@@ -11,33 +11,32 @@
     </head>
 
     <body>
-    <ul id="mainContents">
-        <li><div class="name">
-            <label for="yourName">名前を入力して下さい</label>
+        <div class="name">
+            <label for="yourName">名前を入力して下さい</label><br>
             <input type="text" id="yourName">
-        </div></li>
+        </div>
 
-        <li><div class="picture">
-            <label for="yourPicture">写真をアップロードして下さい</label>
+        <div class="picture">
+            <label for="yourPicture">写真をアップロードして下さい</label><br>
             <input type="file" id="yourPicture">
-        </div></li>
+        </div>
 
-        <li><div class="job">
-            <label for="yourJob">職業を選択して下さい</label>
+        <div class="job">
+            <label for="yourJob">職業を選択して下さい</label><br>
             <select name="yourjob">
                 <option value="empty">-</option>
                 <option value="student">学生</option>
                 <option value="employee">会社員</option>
             </select>
-        </div></li>
+        </div>
 
-        <li><div class="syozoku">
-            <label for="yourSyozoku">所属を入力して下さい</label>
+        <div class="syozoku">
+            <label for="yourSyozoku">所属を入力して下さい</label><br>
             <input type="text" id="yourSyozoku">
-        </div></li>
+        </div>
 
-        <li><div class="birthday">
-            <label for="yourBirthDay">生年月日を選択して下さい</label>
+        <div class="birthday">
+            <label for="yourBirthDay">生年月日を選択して下さい</label><br>
             <select name="month">
                 <option value="empty">-</option>
                 <option value="jan">1月</option>
@@ -88,7 +87,7 @@
                 <option value="30">30日</option>
                 <option value="31">31日</option>
             </select>
-        </div></li>
+        </div>
     </ul>
 
     <button onclick="history.back()">最初に戻る</button>
