update: コード修正
結果部分に表示される言語を日本語に修正。

--- a/form.html
+++ b/form.html
@@ -26,8 +26,8 @@
                 <label for="yourJob">職業を選択して下さい</label><br>
                 <select name="yourJob">
                     <option value="">-</option>
-                    <option value="student">学生</option>
-                    <option value="employee">会社員</option>
+                    <option value="学生">学生</option>
+                    <option value="会社員">会社員</option>
                 </select>
             </div>
 
