update: コード修正
年月日の表示を修正。

--- a/form.html
+++ b/form.html
@@ -177,18 +177,18 @@
 
                 <select name="month">
                     <option value="">-</option>
-                    <option value="jan">1</option>
-                    <option value="feb">2</option>
-                    <option value="mar">3</option>
-                    <option value="apr">4</option>
-                    <option value="may">5</option>
-                    <option value="jun">6</option>
-                    <option value="jul">7</option>
-                    <option value="aug">8</option>
-                    <option value="sep">9</option>
-                    <option value="oct">10</option>
-                    <option value="nov">11</option>
-                    <option value="dec">12</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                    <option value="11">11</option>
+                    <option value="12">12</option>
                 </select>
 
     月
