更新：コード

--- a/form.html
+++ b/form.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <link href="Styles/default.css" rel="stylesheet">
         <link href="Styles/form.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.4/css/all.css">
+        <div id="page_top"><a href="#"></a></div>
         <title>自己紹介アプリ - 情報入力画面</title>
 
         <!--スマホ用のリサイズmetaタグ-->
@@ -272,7 +274,7 @@
             <br>
             
             
-        <a href="result.html" button type="submit" class="btn btn-gradient"><span>送信する</span></botton></a>
+            <input type="submit" value="送信する" class="but">
         </form>
         <br>
         <a href="" button onclick="history.back()" class="btn btn-backhome">最初に戻る</button></a>
