更新：コード

--- a/index.html
+++ b/index.html
@@ -10,12 +10,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     </head>
 
-    <body>
+    <header>
         <h1>自己紹介アプリ</h1>
+        <nav class="gnav">
+            <ul class="menu">
+                <li><a href="index.html" class="head">使い方ガイド</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <body>
         <div class="T_button">
-        <button onclick="location.href='./form.html'">作る</button>
-        <button onclick="location.href='./undefind.html'">見る</button>
-        <button onclick="location.href='./undefind.html'">渡す</button>
+        <button onclick="location.href='./form.html'" class="form">作る</button><br>
+        <button onclick="location.href='./undefind.html'" class="result">見る</button><br>
+        <button onclick="location.href='./undefind.html'" class="give">渡す</button><br>
         </div>
     </body>
 </html>
