更新：コード

--- a/index.html
+++ b/index.html
@@ -25,5 +25,7 @@
         <button onclick="location.href='./undefind.html'" class="result">見る</button><br>
         <button onclick="location.href='./undefind.html'" class="give">渡す</button><br>
         </div>
+    
+        <p class="copy">&copy; 2021 - 2021 Lab_Group5.</p>
     </body>
 </html>
