--- a/result.html
+++ b/result.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="Styles/default.css" rel="stylesheet">
+    <link href="Styles/result.css" rel="stylesheet">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript" src="Scripts/result.js"></script> 
     <title>自己紹介アプリ - 結果</title>
 </head>
 <body>
-    <script type="text/javascript" src="Scripts/result.js"></script>  
 </body>
 </html>
