genderが表示されるように修正

--- a/result.html
+++ b/result.html
@@ -55,7 +55,7 @@
             性別</th>
          <td>
            <script>
-               document.write("<p class= 'job'>" + job + "</p>");
+               document.write("<p class= 'gender'>" + gender + "</p>");
              </script>
            </td>
         </tr>
