--- a/form.html
+++ b/form.html
@@ -72,9 +72,9 @@ document.getElementById('yourPicture').value = img;
                 <p class="bold">
                  <label for="gender">性別を選択してください</label>
                 </p>
-                 <label><input type="radio" name="job" value="男性">男性</label>
-                 <label><input type="radio" name="job" value="女性">女性</label>
-                 <label><input type="radio" name="job" value="その他">その他</label>
+                 <label><input type="radio" name="gender" value="男性">男性</label>
+                 <label><input type="radio" name="gender" value="女性">女性</label>
+                 <label><input type="radio" name="gender" value="その他">その他</label>
             </div>
 
             <div class="cp_iptxt">
