ローカルストレージに変更

--- a/database.html
+++ b/database.html
@@ -98,5 +98,11 @@
        </td>
      </tr>
  </table>
+ <script>
+    function OnButtonClick() {
+        localStorage.clear();
+  }
+</script>
+ <input type="button" value="見終わったらここを押してください" onclick="OnButtonClick();"/><br />
 </body>
 </html>
