--- a/result.html
+++ b/result.html
@@ -118,15 +118,16 @@
 </script>
 
   <script>
-    sessionStorage.setItem('key1', namae);
-    sessionStorage.setItem('key2', email);
-    sessionStorage.setItem('key3', gender);
-    sessionStorage.setItem('key4', job);
-    sessionStorage.setItem('key5', gakubu);
-    sessionStorage.setItem('key6', year);
-    sessionStorage.setItem('key7', month);
-    sessionStorage.setItem('key8', day);
+    localStorage.setItem('key1', namae);
+    localStorage.setItem('key2', email);
+    localStorage.setItem('key3', gender);
+    localStorage.setItem('key4', job);
+    localStorage.setItem('key5', gakubu);
+    localStorage.setItem('key6', year);
+    localStorage.setItem('key7', month);
+    localStorage.setItem('key8', day);
   </script>
 <input type="button" value="QRコードを表示する" onclick="OnButtonClick();"/><br />
+<a href="./database.html">a</a>
 </body>
 </html>
