--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <body>
         <div class="T_button">
         <button onclick="location.href='./form.html'" class="form">作る</button><br>
-        <button onclick="location.href='./undefind.html'" class="result">見る</button><br>
+        <button onclick="location.href='./database.html'" class="result">見る</button><br>
         <button onclick="location.href='./undefind.html'" class="give">渡す</button><br>
         </div>
     
