見る機能修正

--- a/database.html
+++ b/database.html
@@ -103,6 +103,6 @@
         localStorage.clear();
   }
 </script>
- <input type="button" value="見終わったらここを押してください" onclick="OnButtonClick();"/><br />
+ <input type="button" value="作り直したい場合ここを押してからトップに戻って作り直してください" onclick="OnButtonClick();"/><br />
 </body>
 </html>
