--- a/form.html
+++ b/form.html
@@ -297,7 +297,7 @@ document.getElementById('yourPicture').value = img;
             
             <br>
             
-            <input type="submit" value="送信する" class="but">
+            <input type="submit" value="作る!" class="but">
         </form>
         <br>
         <a href="" button onclick="history.back()" class="btn btn-backhome">最初に戻る</button></a>
