各html修正、渡す画面追加

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="T_button">
         <button onclick="location.href='./form.html'" class="form">作る</button><br>
         <button onclick="location.href='./database.html'" class="result">見る</button><br>
-        <button onclick="location.href='./undefind.html'" class="give">渡す</button><br>
+        <button onclick="location.href='./QR.html'" class="give">渡す</button><br>
         </div>
     
         <p class="copy">&copy; 2021 - 2021 Lab_Group5.</p>
